# crx-repo

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yaml
src/crx_repo/: __init__.py  __main__.py  cache.py  chrome.py  client.py  config.py  manifest.py  server.py  toml.py  utils.py
src/crx_repo/config/: config.py
src/crx_repo/config/parser/: __init__.py  parser.py  toml.py
tests/crx_repo/: test_cache.py  test_client.py  test_config.py  test_server.py  test_toml.py  test_utils.py
